--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-	
+<div class="first-text__testing">Lorem ipsum dolor sit amet consectetur adipisicing.</div>	
 </body>
 </html>
