--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>landing project</title>
 	<link rel="stylesheet" href="sass/style.css">
-
+<link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
 </head>
 <body>
+	<NAV class="nav">
+		<div class="container"><div class="nav__row">
+			<div class="logo"><img  class="icon__logo" src="/images/icons/Icon.svg" alt="logo">
+			<span>CutSpace</span></div>
+			<div class="navigation"></div>
+		</div>
+	</div>
+		
+	</NAV>
 	
 </body>
 </html>
