--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,15 @@
 			href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="/src/sass/style.css">
 	</head>
 	<body>
 		<nav class="nav">
 			<div class="container">
 				<div class="nav__row">
 					<div class="logo">
-						<img class="icon__logo" src="./images/icons/Icon.svg" alt="logo" /> <span>CutSpace</span>
+						<img class="icon__logo" src="./images/icons/Icon.svg" alt="logo" /> 
+						<span>CutSpace</span>
 					</div>
 					<div class="navigation"></div>
 				</div>
