work from project

--- a/src/index.html
+++ b/src/index.html
@@ -1,94 +1,159 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>landing project</title>
-		<link
-			href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
-			rel="stylesheet"
-		/>
-		<!-- <link rel="stylesheet" href="/src/index.scss"> -->
-	</head>
-	<body>
-		<nav class="nav none">
-			<div class="container">
-				<div class="nav__row">
-					<div class="logo">
-						<img class="icon__logo img-test" src="./images/icons/Icon.svg" alt="logo" /> 
-						<span>CutSpace</span>
-					</div>
-					<div class="navigation-list">
-						<ul>
-							<li><a href="#" class-="active">Home</a> </li>
-							<li><a href="#">About us</a></li>
-							<li><a href="#">Find space</a></li>
-							<li><a href="#">Share space</a></li>
-							<li><a href="#">Promote space</a></li>
-						</ul>
-					</div>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>landing project</title>
+	<link
+		href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
+		rel="stylesheet" />
+	<!-- <link rel="stylesheet" href="/src/index.scss"> -->
+</head>
+
+<body>
+	<nav class="nav none">
+		<div class="container">
+			<div class="nav__row">
+				<div class="logo">
+					<img class="icon__logo img-test" src="./images/icons/Icon.svg" alt="logo" />
+					<span>CutSpace</span>
+				</div>
+				<div class="navigation-list">
+					<ul>
+						<li><a href="#" class-="active">Home</a> </li>
+						<li><a href="#">About us</a></li>
+						<li><a href="#">Find space</a></li>
+						<li><a href="#">Share space</a></li>
+						<li><a href="#">Promote space</a></li>
+					</ul>
 				</div>
 			</div>
-		</nav>
-		<header class="header none">
-<div class="container">
-	<div class="header__row">
-		<div class="header__text"><h1 class="header__title">Find your custom matched commercial real estate space.</h1>
-		<p class="text__question">in oculis quidem exercitus quid ex ea consequatur? autem vel eum fugiat, quo pertineant ero tibique</p>
-		<form  class="form" action=""><label class="form__label"><input type="text" class="form__input" placeholder="your email adres"><button class="form__button button">subscribe</button></label></form>
-	</div>
-		<div class="header__img"><img src="/src/images/header/Your image here.jpg" alt="real estate space"></div>
-
-	</div>
-</div>
-
-
-
-		</header>
-		<section class="clients none">
-			<div class="container">
-				<div class="clients__row">
-					<img src="/src/images/clients/1.svg" alt="logo">
-					<img src="/src/images/clients/2.svg" alt="logo">
-					<img src="/src/images/clients/3.svg" alt="logo">
-					<img src="/src/images/clients/4.svg" alt="logo">
+		</div>
+	</nav>
+	<header class="header none">
+		<div class="container">
+			<div class="header__row">
+				<div class="header__text">
+					<h1 class="header__title">Find your custom matched commercial real estate space.</h1>
+					<p class="text__question">in oculis quidem exercitus quid ex ea consequatur? autem vel eum fugiat,
+						quo pertineant ero tibique</p>
+					<form class="form" action=""><label class="form__label"><input type="text" class="form__input"
+								placeholder="your email adres"><button
+								class="form__button button">subscribe</button></label></form>
 				</div>
-			</div>
-		</section>
-		<section class="objects">
-<div class="container">
-	<div class="objects__row">
-		<!--image__jojects-->
-		<div class="objects__img">
-			<div class="img__card img-card__rounder"><img class="img-card__img" src="/src/images/cards/Your images here.jpg" alt="image">
-
-			</div>
-			<div class="img__card"><img class="img-card__img" src="/src/images/cards/Your images here1.jpg" alt="image">
+				<div class="header__img"><img src="/src/images/header/Your image here.jpg" alt="real estate space">
+				</div>
 
 			</div>
 		</div>
-		<!--image__jojects-->
-		
-		
-		<!--text__jojects-->
-		<div class="objects__text">
-			<h2 class="objects__title title ">We provide best space for you!</h2>
-        <p class="graf">Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex ea quid est et via procedat oratio quaerimus. </p>
-        <p class="graf">quid aut ad id omnia referri oporteat, ipsum autem nusquam hoc epicurus in ea commodi consequatur?</p>
-			
-<a href="#!" class="button objects__button">learn more</a>
-		
-			
-		
+
+
+
+	</header>
+	<section class="clients none">
+		<div class="container">
+			<div class="clients__row">
+				<img src="/src/images/clients/1.svg" alt="logo">
+				<img src="/src/images/clients/2.svg" alt="logo">
+				<img src="/src/images/clients/3.svg" alt="logo">
+				<img src="/src/images/clients/4.svg" alt="logo">
+			</div>
 		</div>
-         <!--text__jojects-->
-	</div>
-</div>
+	</section>
+	<section class="objects none">
+		<div class=" container container-fluid paddings">
+			<div class="objects__row">
+				<!--image__jojects-->
+				<div class="objects__img">
+					<div class="img__card img-card__rounder"><img class="img-card__img"
+							src="/src/images/cards/Your images here.jpg" alt="image">
+
+					</div>
+					<div class="img__card"><img class="img-card__img" src="/src/images/cards/Your images here1.jpg"
+							alt="image">
+						<div class="img-card__info">
+							<div class="card-info">
+								<div class="card-info__icon"><img src="/src/images/icons/Shape.svg" alt="building">
+								</div>
+								<div class="card-info__text">
+									<h3 class="card-info__title">Twelve West Lake</h3>
+									<p>Space for up to 150 people</p>
+								</div>
+							</div>
 
 
-		</section>
-		<script src="/src/index.js"></script>
-	</body>
+						</div>
+					</div>
+				</div>
+				<!--image__jojects-->
+
+
+				<!--text__jojects-->
+				<div class="objects__text">
+					<h2 class="objects__title title ">We provide best space for you!</h2>
+					<p class="graf">Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex ea quid est et
+						via procedat oratio quaerimus. </p>
+					<p class="graf">quid aut ad id omnia referri oporteat, ipsum autem nusquam hoc epicurus in ea
+						commodi consequatur?</p>
+
+					<a href="#!" class="button objects__button">learn more</a>
+
+
+
+				</div>
+				<!--text__jojects-->
+			</div>
+		</div>
+
+
+	</section>
+
+	<section class="cta none">
+		<div class="container">
+			<div class="cta__block">
+				<div class="cta__img"><img src="/src/images/cta/Dashboard (On my profile soon).jpg" alt="Dashboard">
+				</div>
+				<!--//cta__text-->
+				<div class="cta__text">
+					<h2 class="cta__tittle title">Start using our product</h2>
+					<p>Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex
+					</p>
+					<div class="cta__buttons-row">
+						<a href="#!" class="button">Contact Us</a>
+						<button class="button button__white button__play">Watch Now</button>
+	
+					</div>
+				</div>
+			</div>
+			<!-- //cta__text -->
+
+		</div>
+	</section>
+	<section class="serve">
+		<div class="container">
+			<div class="serve__heading">
+				<h2 class="title">Who do we serve?</h2>
+				<p>Every buyer and seller of tech and services in the world.</p>
+			</div>
+			<div class="serve__row"><a href="#!" class="card__customer">
+				<img src="./images/icons/sellers.svg" alt="Buyers">
+<h3 class="card-customer__title title">Buyers</h3>
+<div class="card-costumer__text"><p>Torquem detraxit hosti et quidem se texit, ne ad eam.</p></div>
+<div class="button">Get started</div>
+			</a>
+			<a href="#!"class="card__customer">
+				<img src="./images/icons/sellers.svg" alt="seller">
+<h3 class="card-customer__title title">Buyers</h3>
+<div class="card-costumer__text"><p>Torquem detraxit hosti et quidem se texit, ne ad eam.</p></div>
+<div class="button">Get started</div>
+			</a>
+			</div>
+		</div>
+	</section>
+
+	<script src="/src/index.js"></script>
+</body>
 
 </html>
