--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<nav class="nav none">
+	<nav class="nav">
 		<h2 class="visually-hidden">Our Clients</h2>
 		<div class="container">
 			<div class="nav__row">
@@ -33,7 +33,7 @@
 			</div>
 		</div>
 	</nav>
-	<header class="header none">
+	<header class="header ">
 		<div class="container">
 			<div class="header__row">
 				<div class="header__text">
@@ -53,7 +53,7 @@
 
 
 	</header>
-	<section class="clients none">
+	<section class="clients ">
 		<div class="container">
 			<div class="clients__row">
 				<img src="/src/images/clients/1.svg" alt="logo">
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="objects none">
+	<section class="objects ">
 		<div class=" container container-fluid paddings">
 			<div class="objects__row">
 				<!--image__jojects-->
@@ -111,7 +111,7 @@
 
 	</section>
 
-	<section class="cta none">
+	<section class="cta ">
 		<div class="container">
 			<div class="cta__block">
 				<div class="cta__img"><img src="/src/images/cta/Dashboard (On my profile soon).jpg" alt="Dashboard">
@@ -132,7 +132,7 @@
 
 		</div>
 	</section>
-	<section class="serve none">
+	<section class="serve ">
 		<div class="container">
 			<div class="serve__heading">
 				<h2 class="title">Who do we serve?</h2>
@@ -182,7 +182,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="benefits none">
+	<section class="benefits ">
 		<div class="container">
 			<div class="benefits__heading">
 				<h2 class="title">Who choose us ?</h2>
@@ -250,7 +250,7 @@
 
 
 	</section>
-<section class="testimonials">
+<section class="testimonials ">
 <div class="container">
 <div class="testimonials__objects"><div class="testimonials__heading"><div class="testimonials__title"><h2 class="title">
 	Thanks for your nice words to us</h2></div><div class="testimonials__subtitle"><p>Si sine causa, nollem me tamen laudandis maioribus mois corrupisti nec voluptas</p></div></div>
@@ -313,6 +313,72 @@
 
 
 </section>
+<section class="contacts ">
+<div class="container">
+<div class="contacts__info">
+	
+		<div class="contact__title title">Get experience from the expert</div>
+<div class="contact__text">
+	<p>Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex</p></div>
+	<a href="#!" class="button__white button ">Contact us</a>
+</div>
+</section>
+<footer class="footer">
+	<div class="container">
+		<!--footer__row-->
+		<div class="footer__row">
+			<!--footer__info-->
+		<div class="footer__info">
+			<div class="footer__logo">	<div class="logo">
+				<img class="icon__logo img-test" src="./images/icons/Icon.svg" alt="logo" />
+				<span>CutSpace</span>
+			</div></div>
+		<p class="footer__info-text">Quae fuerit causa, nollem me ab illo inventore veritatis</p>
+		<div clas="footer__socials">
+			<a href="#!"><img class="footer__icon" src="/src/images/social icons/facebook.svg" alt="icon"></a>
+			<a href="#!"><img class="footer__icon"src="/src/images/social icons/twitter.svg" alt="icon"></a>
+			<a href="#!"><img class="footer__icon"src="/src/images/social icons/youtube.svg" alt="icon"></a>
+			<a href="#!"><img class="footer__icon"src="/src/images/social icons/linkedin.svg" alt="icon"></a>
+	</div>
+	</div>
+		<!--footer__info-->
+		
+		<!--footer nav-->
+		<div class="footer__nav">
+<div class="footer-nav__block"><h4 class="footer-nav-block__title">Privacy</h4>
+<ul class="footer-nav__list">
+<li><a href="#!">Si sine causa</a></li>
+<li><a href="#!">Quae fuerit causa</a></li>
+<li><a href="#!">Certe, inquam</a></li>
+<li><a href="#!">Torquatos nostros? </a></li>
+</ul>
+</div>
+<div class="footer-nav__block"><h4 class="footer-nav-block__title">Legal</h4>
+	<ul class="footer-nav__list">
+	<li><a href="#!">Ut placet, inquam </a></li>
+	<li><a href="#!">Certe, inquam</a></li>
+	<li><a href="#!">Et quidem rerum</a></li>
+	<li><a href="#!">At vero eos et </a></li>
+	</ul>
+</div>
+	<div class="footer-nav__block"><h4 class="footer-nav-block__title">Contact</h4>
+		<ul class="footer-nav__list">
+		<li><a href="#!">Primum igitur </a></li>
+		<li><a href="#!">Certe, inquam</a></li>
+		<li><a href="#!">Quae fuerit causa</a></li>
+		</ul>
+       </div>
+
+
+
+		</div>
+
+		</div>
+<!--footer__row-->
+
+
+	</div>
+</footer>
 
 	<script src="/src/index.js"></script>
 </body>
